<resources>
	<string name="app_name" translatable="false">Archéo\'scan</string>
    <string name="app_version" translatable="false">v1.2.1</string>
	<string name="license" translatable="false">Scan and discover bones using arduino to teach kids archeology.\nCopyright (C) 2020  lubenard\n
    This program is free software: you can redistribute it and/or modify\n
    it under the terms of the GNU General Public License as published by\n
    the Free Software Foundation, either version 3 of the License, or\n
    (at your option) any later version.\n\n
    This program is distributed in the hope that it will be useful,\n
    but WITHOUT ANY WARRANTY; without even the implied warranty of\n
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the\n
    GNU General Public License for more details.\n\n
    You should have received a copy of the GNU General Public License\n
    along with this program.  If not, see https://www.gnu.org/licenses/.\n</string>
    
    <string name="menu_about">About</string>
    <string name="menu_browse_videos">Browse videos</string>
    <string name="menu_set_language">Change language</string>

    <string name="license_github_link_text">You can find the whole source code of this app here:</string>
    <string name="license_github_link_link" translatable="false">https://github.com/lubenard/archeo</string>
    <string name="license_main_license">This app is under GPLv3 Licence.</string>
    <string name="license_main_leonids">This app use Leonids library, under Apache License 2.0 license</string>
    <string name="license_github_leonids_link_text">You can find the whole source code of Leonids here:</string>
    <string name="license_github_leonids_link_link" translatable="false">https://github.com/plattysoft/Leonids</string>

    <string name="bluetooth_list_icon">Bluetooth Icon</string>
    
    <string name="landing_greeting">Welcome into Archéo\'scan!</string>
    <string name="landing_start_session">Start the session!</string>

    <string name="quizz_title" translatable="false">Quizz Time !</string>
    <string name="quizz_check_answer">Check my answers</string>

    <string name="wait_scan">Scan the burial site!</string>

    <string name="bluetooth_warning_title">Warning</string>
    <string name="bluetooth_warning_text">Do you want to connect to this device ? This setting will be remembered.</string>
    <string name="bluetooth_warning_toast">Preference saved!</string>

    <string name="bluetooth_toast_error">We could not connect to device. Are you sure the device is turned on ?</string>
    <string name="bluetooth_toast_success">Connection successful!</string>
    <string name="error">Error!</string>

    <string name="bluetooth_does_not_exist">Sorry, bluetooth does not exist on this device. Exiting…</string>
    <string name="bluetooth_required">Bluetooth is needed for this app, exiting now</string>
	<string name="bad_card_code">This card is not recognized by this app. Are you sure you are using right cards?</string>
    <string name="card_during_video">You are currently inside a video ! You cannot pass a card during this time</string>

    <string name="bluetooth_discovered">Discovered</string>
    <string name="bluetooth_paired">Paired</string>

    <string name="video_intro">Intro</string>
    <string name="video_forearm">Forearm</string>
    <string name="video_pelvis">Pelvis</string>
    <string name="video_skull">Skull</string>
    <string name="video_femur">Femur</string>
    <string name="video_humerus">Humerus</string>
    <string name="video_chronology">Chronology</string>
    <string name="video_container">Container</string>
    <string name="video_tibia">Tibia</string>

    <string name="intro_question">What is this archaeological structure?</string>
    <string name="intro_answ1">A burial site</string>
    <string name="intro_answ2">A silo</string>
    <string name="intro_answ3">An oven</string>
    <string name="intro_answ4">A wall</string>

    <string name="forearm_question">Does the forearm have a fracture?</string>
    <string name="forearm_answ1">Yes, at the bottom of the forearm</string>
    <string name="forearm_answ2">Yes, at the top of the forearm</string>
    <string name="forearm_answ3">No</string>
    <string name="forearm_answ4">The subject does not have a forearm!</string>

    <string name="container_question">How was he buried?</string>
    <string name="container_answ1">In a plaster sarcophagus</string>
    <string name="container_answ2">Without container</string>
    <string name="container_answ3">In a wood box</string>
    <string name="container_answ4">In a ballot box</string>

    <string name="pelvis_question">What is the gender of the subject?</string>
    <string name="pelvis_answ1">The subject is a woman</string>
    <string name="pelvis_answ2">The subject is a man</string>
    <string name="pelvis_answ3">It\'s not very clear!</string>
    <string name="pelvis_answ4">There is no pelvis</string>

    <string name="skull_question">How many cavities do you have?</string>
    <string name="skull_answ1">None</string>
    <string name="skull_answ2">The subject has 1 cavity</string>
    <string name="skull_answ3">The subject has 2 cavity</string>
    <string name="skull_answ4">The subject has 3 cavity</string>

    <string name="femur_question">How big is the subject?</string>
    <string name="femur_answ1">Subject is less than 1.50m tall</string>
    <string name="femur_answ2">Subject is between 1.51m and 1.70m tall</string>
    <string name="femur_answ3">Subject is between 1.71m and 1.90m tall</string>
    <string name="femur_answ4">Subject is over 1.91 m tall</string>

    <string name="humerus_question">How is the humerus ?</string>
    <string name="humerus_answ1">A one-part humerus is an adult</string>
    <string name="humerus_answ2">A two-part humerus is an adolescent</string>
    <string name="humerus_answ3">A 3-part humerus, that\'s a child</string>
    <string name="humerus_answ4">There is no humerus</string>

    <string name="chronology_question">From what period does this burial date?</string>
    <string name="chronology_answ1">-10099, Prehistory</string>
    <string name="chronology_answ2">299, the Antiquity</string>
    <string name="chronology_answ3">1099, the Middle Ages</string>
    <string name="chronology_answ4">2021, today</string>

    <string name="tibia_question">What do you see on the tibia?</string>
    <string name="tibia_answ1">The subject shows signs of a fracture</string>
    <string name="tibia_answ2">The subject has one tibia that is smaller than the other!</string>
    <string name="tibia_answ3">The subject has signs of an infection</string>
    <string name="tibia_answ4">The tibia is missing!</string>

    <string name="good_answer">Well played, you did it !</string>
    <string name="bad_answer">Oops, wrong answer</string>
    <string name="no_answer">Please make a choice</string>
    <string name="menu_reset_bt">Forget bluetooth device</string>
    <string name="launch_intro">Launch intro</string>
    <string name="launch_photo">Discovery over, let\'s go to the final quizz!</string>
	<string name="auto_connect_toast">Connecting to device…</string>
	<string name="end_fragment_main_text">Well played! You have finished the activity</string>
    <string name="exit">Restart the application</string>
	<string name="already_discovered_elemment">Wait a minute, this element has already been scanned!</string>
    <string name="not_all_video_scanned">You have not scanned all videos yet !</string>
    <string name="not_right_card">This is not the right card to pass now</string>
    <string name="currently_inside_video">You are currently not inside a video</string>

    <string name="menu_refresh">Refresh</string>
	<string name="reload_bt">Refreshing Bluetooth...</string>
    <string name="menu_reset_user_progress">Reset progress</string>
	<string name="saveFound">A save has been found !</string>
    <string name="saveNotFound">No save has been found, starting with fresh start</string>
	<string name="final_quizz_question">Based on all the previous questions, who do you think is in the grave?</string>
    <string name="final_quizz_consigne">Click on the right character</string>

    <string name="recap">1. This is a burial site.\n2. 1099, the Middle Ages.\n3. He is buried without a container.\n4. The subject has two cavities.\n5. The humerus is in one piece.\n6. Forearm has a fracture at the bottom.\n7. Subject is male.\n8. Subject is between 1m71 and 1m90 tall.\n9. Signs of an infection can be seen.</string>
    <string name="about_to_quit">You are about to quit the app. If you want to quit, press back again</string>
    <string name="bluetooth_title">Connect to a bluetooth device</string>
	<string name="dingos_quizz_time" translatable="false">Archéo\'scan - QUIZZ TIME !</string>
	<string name="reminder_prec_answer_final_quizz">Reminder of previous answers</string>
    <string name="clues">Clues</string>
    <string name="bt_connection_broken">Bluetooth connection has been broken</string>
	<string name="menu_try_reconnect">Try reconnection</string>
</resources>