<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="vertical"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="30dp"
		android:gravity="center">

	<Button
		android:id="@+id/replay_intro"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_intro" />

	<Button
		android:id="@+id/replay_avant_bras"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_forearm" />

	<Button
		android:id="@+id/replay_coxaux"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_pelvis" />

	<Button
		android:id="@+id/replay_crane"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_skull" />

	<Button
		android:id="@+id/replay_femur"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_femur" />

	<Button
		android:id="@+id/replay_humerus"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_humerus" />

	<Button
		android:id="@+id/replay_object"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_chronology" />

	<Button
		android:id="@+id/replay_reduction"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_container" />

	<Button
		android:id="@+id/replay_tibia"
		android:layout_height="wrap_content"
		style="@style/custom_button_replay"
		android:text="@string/video_tibia" />

	</LinearLayout>
</ScrollView>